# llamanager

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  VERSION  pyproject.toml
.playwright-cli/: page-2026-05-23T20-37-21-917Z.yml  page-2026-05-23T20-37-25-081Z.yml  page-2026-05-23T20-37-39-940Z.yml  page-2026-05-23T20-37-43-758Z.yml  page-2026-05-23T20-37-54-119Z.yml  page-2026-05-23T20-37-55-397Z.yml  page-2026-05-23T20-47-13-386Z.yml  page-2026-05-23T20-47-13-813Z.yml  page-2026-05-23T20-47-48-699Z.yml  page-2026-05-23T20-47-50-072Z.yml  page-2026-05-23T20-48-21-942Z.yml  page-2026-05-23T20-48-40-016Z.yml  page-2026-05-23T20-48-49-399Z.yml  page-2026-05-23T20-48-49-736Z.yml  page-2026-05-23T21-19-07-411Z.yml  page-2026-05-23T21-19-07-798Z.yml
.playwright-mcp/: page-2026-05-11T14-02-56-637Z.yml  page-2026-05-11T14-03-37-021Z.yml  page-2026-05-11T14-04-56-416Z.yml  page-2026-05-11T14-07-28-648Z.yml  page-2026-05-11T14-10-48-633Z.yml  page-2026-05-11T14-11-31-556Z.yml  page-2026-05-11T14-12-28-738Z.yml  page-2026-05-11T23-09-52-229Z.yml  page-2026-05-11T23-12-53-259Z.yml  page-2026-05-11T23-39-10-362Z.yml  page-2026-05-12T00-12-27-387Z.yml  page-2026-05-12T00-16-10-573Z.yml  page-2026-05-12T00-40-54-764Z.yml
assets/: _preview.html
llamanager/: __init__.py  __main__.py  _routing.py  activity.py  admin_client.py  api_admin.py  api_anthropic.py  api_ui.py  api_v1.py  app.py  asr_catalog.py  asr_model_jobs.py  asr_stream.py  audio_runner.py  auth.py  auto_update.py  caller.py  cli.py  config.py  db.py  diffusion_catalog.py  engine_installer.py  events.py  exclusive.py  (+16 more)
(+84 files in other folders)
